[tool.poetry]
name = "projeto-pratico"
version = "0.1.0"
description = ""
authors = ["Jackson_Miranda <jackson.sbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
